@@ -42,6 +42,7 @@ Cacti CHANGELOG
 -issue#5017: Undefined array key and Rounding causes errors
 -issue#5018: It is possible in some rare cases to have 'remember me' enabled and still be logged out after a browser timeout 
 -issue#5024: SNMP connection does not replace escape char in 'community'
+-issue#5028: Cacti User Stats can throw errors depending on the PHP version that you running
 -feature#1100: Structured path not created when using remote poller and Update On-Demand
 -feature#1392: AJAX handled errors do not notify Admins that page errors exist
 -feature#2239: Allow Import and Export to be more controlled
